--- a/Project4/home.css
+++ b/Project4/home.css
@@ -1,56 +1,67 @@
+body{
+    background-color: red;
+}
 
+.main{
+    margin: auto;
+    position: relative;
+    left: 50%;
+    width: 50%;
+    border: 1px solid black;
+    padding: 10px;
+}
 
 .dropbtn {
-    background-color: #111;
-    color: white;
+    background-color: #910091;
+    color: yellow;
     padding: 16px;
     font-size: 16px;
     border: none;
     cursor: pointer;
 }
 .dropbtn5 {
-    background-color: red;
-    color: white;
+    background-color: black;
+    color: darkgrey;
     padding: 18px;
     font-size: 18px;
     border: none;
     cursor: pointer;
 }
 .dropbtn1 {
-    background-color: #111;
-    color: white;
+    background-color: #910091;
+    color: yellow;
     padding: 16px;
     font-size: 16px;
     border: none;
     cursor: pointer;
 }
 .dropbtn2 {
-    background-color: #111;
-    color: white;
+    background-color: #910091;
+    color: yellow;
     padding: 16px;
     font-size: 16px;
     border: none;
     cursor: pointer;
 }
 .dropbtn3 {
-    background-color: #111;
-    color: white;
+    background-color: #910091;
+    color: yellow;
     padding: 16px;
     font-size: 16px;
     border: none;
     cursor: pointer;
 }
 .dropbtn4 {
-    background-color: #111;
-    color: white;
+    background-color: #910091;
+    color: yellow;
     padding: 16px;
     font-size: 16px;
     border: none;
     cursor: pointer;
 }
 .dropbtn6 {
-    background-color: #111;
-    color: white;
+    background-color: #910091;
+    color: yellow;
     padding: 16px;
     font-size: 16px;
     border: none;
@@ -94,7 +105,7 @@
 .dropdown-content {
     display: none;
     position: absolute;
-    background-color: #f8f8ff;
+    background-color: lightgrey;
     min-width: 160px;
     
     z-index: 1;
@@ -103,7 +114,7 @@
 .dropdown-content1 {
     display: none;
     position: absolute;
-    background-color: #f8f8ff;
+    background-color: lightgrey;
     min-width: 160px;
     
     z-index: 1;
@@ -111,7 +122,7 @@
 .dropdown-content2 {
     display: none;
     position: absolute;
-    background-color: #f8f8ff;
+    background-color: lightgrey;
     min-width: 160px;
     
     z-index: 1;
@@ -119,7 +130,7 @@
 .dropdown-content3 {
     display: none;
     position: absolute;
-    background-color: #f8f8ff;
+    background-color: lightgrey;
     min-width: 160px;
     
     z-index: 1;
@@ -127,7 +138,7 @@
 .dropdown-content4 {
     display: none;
     position: absolute;
-    background-color: #f8f8ff;
+    background-color: lightgrey;
     min-width: 160px;
     
     z-index: 1;
@@ -136,7 +147,7 @@
 .dropdown-content6 {
     display: none;
     position: absolute;
-    background-color: #f8f8ff;
+    background-color: lightgrey;
     min-width: 160px;
     
     z-index: 1;
@@ -321,51 +332,55 @@ figcaption {
 #userWelcome{
 	text-align: right;
 	margin-left:200px;
+  color: red;
+  font-size: 24px;
 }
 
 
 #login{
-  position: absolute;
-    float: center;
-   top: 465px;
-   right:500px;
-  background-color: #A9A9A9;
-  text-align: center;
-  height: 200px;
-  width: 600px;
-  align-items: center;
+    position: relative;
+    margin: auto;
+    right: 10%;
+    top: 300px;
+    background-color: red;
+    text-align: center;
+    height: 250px;
+    width: 600px;
 
 }
 #signup{
-  position: absolute;
-    float: center;
-   top: 465px;
-   right:500px;
-  background-color: #A9A9A9;
+  position: relative;
+  margin: auto;
+  right: 10%;
+  top: 300px;
+  background-color: red;
   text-align: center;
   height: 250px;
   width: 600px;
 
 }
 #pay{
-  position: absolute;
-    float: center;
-   top: 665px;
-   right:500px;
-  background-color: #A9A9A9;
-  text-align: center;
-  height: 250px;
-  width: 600px;
-
+    position: relative;
+    margin: auto;
+    right: 10%;
+    top: 300px;
+    background-color: red;
+    text-align: center;
+    height: 250px;
+    width: 600px;
 }
 
-.invTable{
-	  text-align: center;
-	margin-left: auto;
-margin-right: auto;
-	
+#invTable{
+    position: relative;
+    margin: auto;
+    top: 300px;
+}
+.inventory{
+    position: relative;
+    top:300px
 }
 table{
+    top:300px;
 	text-align: center;
 	margin-left: auto;
 	margin-right: auto;
@@ -384,32 +399,32 @@ h2{
 }
 
 #cart{
-  position: absolute;
-    float: center;
-   top: 465px;
-   right:500px;
-  background-color: #A9A9A9;
-  text-align: center;
-  height: 200px;
-  width: 600px;
+    position: relative;
+    margin: auto;
+    right: 10%;
+    top: 300px;
+    background-color: red;
+    text-align: center;
+    height: 250px;
+    width: 600px;
 
 }
 #profile{
-  position: absolute;
-    float: center;
-   top: 465px;
-   right:500px;
-  background-color: #A9A9A9;
-  text-align: center;
-  height: 250px;
-  width: 600px;
+    position: relative;
+    margin: auto;
+    right: 10%;
+    top: 300px;
+    background-color: red;
+    text-align: center;
+    height: 250px;
+    width: 600px;
 
 }
 #ticket{
   position: absolute;
     float: center;
    top: 515px;
-   right:500px;
+   right:400px;
   background-color: #A9A9A9;
   text-align: center;
   height: 250px;
@@ -431,7 +446,7 @@ h2{
   position: absolute;
     float: center;
    top: 975px;
-   right:500px;
+   right:400px;
   background-color: #A9A9A9;
   text-align: center;
   height: 130px;
@@ -452,16 +467,16 @@ h2{
   
 }
 #para{
-  background-color: #DCDCDC;
   font-size: 18px;
   color: #B22222;
   height: 120px;
   width: 600px;
-   position: absolute;
-    float: center;
-   top: 465px;
-   right:500px;
-   text-align: center;
+  position: relative;
+  margin: auto;
+  right: 10%;
+  top: 300px;
+  float: center;
+  text-align: center;
 }
 #offers {
    position: absolute;
